--- a/authenticator/src/main/res/values/strings.xml
+++ b/authenticator/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">AccountAuthenticator</string>
+    <string name="error_account_exists">account already exist!</string>
+    <string name="error_account_not_exists">account not exist!</string>
 </resources>
